syntax = "proto3";

package datastore;

option java_package = "datastore";
option java_outer_classname = "DatastoreProto";

service DataProcessing {
  rpc Read (InputConfig) returns (ReadResult);
  rpc AppendSingleResult (AppendRequest) returns (WriteResult);
}

message InputConfig {
  string filePath = 1;
}

message OutputConfig {
  string filePath = 1;
}

message ReadResult {
  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }
  Status status = 1;
  repeated int32 data = 2;
}

message AppendRequest {
  OutputConfig output = 1;
  string result = 2;
  string delimiter = 3;
}

message WriteResult {
  enum WriteResultStatus {
    SUCCESS = 0;
    FAILURE = 1;
  }
  WriteResultStatus status = 1;
}
