syntax = "proto3";

option java_package = "networkapi";
// option java_outer_classname = "NetworkAPIProto"; // cannot create the RequestMessage and ResponseMessage files seperately from this file. 

package networkapi;

service NetworkAPI {
  rpc ProcessRequest (RequestMessage) returns (ResponseMessage);
}

message RequestMessage {
  string request_data = 1;
}

message ResponseMessage {
  string response_data = 1;
}
